--- a/package.json
+++ b/package.json
@@ -13,5 +13,16 @@
     "console"
   ],
   "author": "Wes Todd",
-  "license": "ISC"
+  "license": "ISC",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wesleytodd/loggerr.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wesleytodd/loggerr/issues"
+  },
+  "homepage": "https://github.com/wesleytodd/loggerr"
 }
