--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "loggerr",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple logger to console or file",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "log",
