--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loggerr",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "A simple logger to console or file",
   "main": "index.js",
   "scripts": {
@@ -27,5 +27,8 @@
   "homepage": "https://github.com/wesleytodd/loggerr",
   "dependencies": {
     "chalk": "^1.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3"
   }
 }
