npm version of happiness

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "chalk": "^1.0.0"
   },
   "devDependencies": {
-    "happiness": "github:jedwatson/happiness",
+    "happiness": "^5.5.0",
     "mocha": "^2.3.3",
     "mochify": "^2.15.0"
   }
