--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple logger to console or file",
   "main": "index.js",
   "scripts": {
-    "test": "happiness && mocha",
+    "test": "standard && mocha",
     "test-browser": "mochify --wd test/index.js",
     "prepublishOnly": "npm t",
     "postpublish": "git push && git push --tags"
@@ -32,8 +32,8 @@
     "chalk": "^1.1.3"
   },
   "devDependencies": {
-    "happiness": "^10.0.2",
     "mocha": "^5.2.0",
-    "mochify": "^5.7.0"
+    "mochify": "^5.7.0",
+    "standard": "^13.1.0"
   }
 }
