--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loggerr",
-  "version": "2.1.0-0",
+  "version": "2.1.0",
   "description": "A simple logger to console or file",
   "main": "index.js",
   "scripts": {
