--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loggerr",
-  "version": "3.0.0-3",
+  "version": "3.0.0",
   "description": "A simple logger to console or file",
   "main": "index.js",
   "type": "commonjs",
