--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   },
   "homepage": "https://github.com/wesleytodd/loggerr",
   "dependencies": {
-    "chalk": "^2.4.2"
+    "chalk": "^4.1.0"
   },
   "devDependencies": {
+    "c8": "^7.3.0",
     "mocha": "^6.2.0",
     "standard": "^13.1.0",
-    "standard-version": "^9.0.0",
-    "c8": "^7.3.0"
+    "standard-version": "^9.0.0"
   }
 }
