--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,3 +18,19 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: npm install and test
       run: npm it
+  test-vlt:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [22.x]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: vlt install and test
+      run: |
+        npx -y vlt install || npx -y vlt install
+        npx -y vlt run test
+        
