--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
   },
   "homepage": "https://github.com/wesleytodd/loggerr",
   "dependencies": {
+    "@types/node": "^22.9.0",
     "chalk": "^4.1.0",
-    "@types/node": "^22.9.0"
+    "string-length": "^4.0.2"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
