--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,31 +5,38 @@ on:
     branches:
       - main
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v5
+    - name: Use Node.js 24.x
+      uses: actions/setup-node@v5
+      with:
+        node-version: 24.x
+    - run: node --run setup
+    - run: npm run lint
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [18.x, 20.x, 22.x, 24.x]
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v5
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install and test
-      run: npm it
+    - run: node --run setup || npm install
+    - run: npm run test
   test-vlt:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22.x]
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - uses: actions/checkout@v5
+    - name: Use Node.js 24.x
+      uses: actions/setup-node@v5
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 24.x
     - name: vlt install and test
       run: |
-        npx -y vlt install || npx -y vlt install
+        npx -y vlt install
         npx -y vlt run test
